k8s/crossplane/vpc.yaml
# VPC and Networking for Diet Management App
# Creates VPC with public and private subnets in ap-southeast-2
---
# Route to Internet Gateway
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: diet-app-public-route
spec:
  forProvider:
    region: ap-southeast-2
    routeTableIdSelector:
      matchLabels:
        app: diet-management
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdSelector:
      matchLabels:
        app: diet-management
  providerConfigRef:
    name: aws-prod
